# ResearchAgent

./: .env.example  README.md  SETUP_NEW_LAPTOP.md  main.py  pyproject.toml  startup_research.db
src/: crew_orchestration.py
src/agents/: crew_agents.py
src/config/: settings.py
src/database/: db.py
src/models/: __init__.py  schemas.py
src/tasks/: crew_tasks.py
src/tools/: crew_tools.py  email_tools.py  search_tools.py
src/utils/: __init__.py  agent_tracker.py  db_queries.py  output_manager.py
tests/: __init__.py  test_database.py  test_utilities.py
